# hsk_flashcards

./: Cargo.toml  LICENSE  README  README.md  make_apkg.sh  make_apkg_hanping.sh  make_apkg_integrated.sh
scripts/: deck_subtract.py  migrate_integrated.sh  migrate_progress.py
src/: anki.rs  apkg_col.txt  card.css  cedict.rs  chinese_note.rs  create_apkg.sh  extra_dict.txt  extra_dict_integrated.txt  flds.json  hanping.rs  hsk.rs  integrated.rs  integrated_wordlist.csv  main.rs  preferred_entries.csv  preferred_entries.yaml  preferred_entry.rs  templates.yaml
