[package]

name = "hsk_flashcards"
version = "0.0.1"
authors = ["Kerrick Staley <kerrick@kerrickstaley.com>"]

[dependencies]

csv = "0.14.2"
getopts = "0.2.11"
time = "0.1.24"
regex = "0.1.38"
regex_macros = "0.1.20"
rusqlite = "0.0.17"
rust-crypto = "0.2.18"
rustc-serialize = "0.3.15"
yaml = "0.2.0"
